# tripod-api

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.bhsa  Dockerfile.dev  Makefile  README.md  cosmic-ray.toml  docker-compose.yml  gcs-cors.json  pyproject.toml  sound-necklace-cors.json
.github/scripts/: claude_cost.py
.github/workflows/: claude-review.yml  deploy.yml  lint.yml  migrations.yml  mutation.yml  test.yml
alembic/: env.py
alembic/versions/: 00d369476436_merge_sound_necklace_main_head_into_obt_.py  20260303_0001_add_composite_indexes.py  20260305_0001_add_book_context_tables.py  20260305_0002_add_bcd_is_active.py  20260306_0001_add_regeneration_feedback.py  20260306_0002_add_roles_at_approval.py  20260306_0003_seed_specialist_roles.py  20260309_0002_seed_analyst_role_for_mm.py  20260317_0001_add_locale_and_translations.py  20260318_0001_update_genre_taxonomy_add_register.py  20260415_0001_seed_unclassified_oc_taxonomy.py  20260516_0001_add_translation_helper_tables.py  20260517_0001_add_apps_auto_approve.py  20260518_0001_add_project_health_tables.py  20260518_0002_backfill_ph_bootstrap_admin.py  20260519_0001_add_ph_agent_prompts.py  20260522_0001_normalize_bcd_enum_fields.py  20260601_0001_add_oc_recordings_unique_title.py  20260603_0001_add_annotation_studio_tables.py  20260608_0001_as_language_members_and_indexes.py  20260609_0001_prune_seeded_language_members.py  20260704_0001_app_platforms_array.py  20260704_0002_add_language_updated_at.py  20260704_0003_add_language_is_active.py  20260704_0004_add_language_created_by.py  20260709_0001_add_change_requests.py  20260709_0001_add_oc_acousteme_artifacts.py  20260709_0002_change_request_new_language.py  20260710_0001_add_public_requests.py  20260713_0001_add_sound_necklace_sessions.py  20260713_0001_backfill_project_phases_cross_product.py  20260713_0001_widen_acousteme_audio_id.py  20260714_0001_add_change_requests.py  20260714_0001_add_sound_necklace_sessions.py  20260714_0002_add_sn_audio_refs.py  20260714_0002_change_request_new_language.py  20260714_0003_add_sn_artifacts.py  20260714_0101_add_change_requests.py  20260714_0102_change_request_new_language.py  20260715_0001_add_sn_voice_answers.py  (+17 more)
app/: main.py
app/api/: access_requests.py  apps.py  auth.py  bhsa.py  book_context.py  books.py  change_requests.py  languages.py  meaning_maps.py  notifications.py  organizations.py  pericopes.py  phases.py  places.py  projects.py  public.py  public_requests.py  rag.py  uploads.py  users.py
app/api/annotation_studio/: __init__.py  _deps.py  audio.py  export.py  languages.py  members.py  results.py  speakers.py  tier_a.py  tier_b.py  tier_c.py
app/api/book_context/: __init__.py  _deps.py  analysis.py  crud.py  feedback.py  sections.py  workflow.py
app/api/colar/: __init__.py  _deps.py  artifacts.py  audios.py  lock.py  resources.py  sessions.py
app/api/meaning_maps/: __init__.py  _deps.py  crud.py  export.py  feedback.py  generation.py
app/api/oral_collector/: acoustemes.py  genres.py  invites.py  projects.py  recordings.py  stats.py  storytellers.py
app/api/platform/: __init__.py  stt.py  tts.py
app/api/project_health/: __init__.py  _deps.py  admin.py  interviews.py  prompts.py  reports.py  voice.py
app/core/: access_control.py  as_enums.py  auth_cache.py  auth_middleware.py  config.py  enums.py  exceptions.py  org_scope.py  qdrant.py  rate_limit.py  task_queue.py
app/inngest/: __init__.py  audio_splitting.py  schemas.py  sn_transcription.py  upload_processing.py
app/models/: __init__.py  annotation_studio.py  app.py  auth.py  book_context.py  change_request.py  colar.py  language.py  meaning_map.py  oc_acousteme.py  oc_project.py  oc_recording.py  oc_storyteller.py  org.py  phase.py  platform.py  project.py  project_health.py  public_request.py  sound_necklace.py  translation_helper.py  user.py
app/services/: __init__.py
app/utils/: jwt.py
http/: colar.http  sound-necklace.http
scripts/: assign_admin.py  backfill_ph_reports.py  check_module_size.py  grant_app_role.py  grant_platform_admin.py  import_ruth_acoustemes.py  seed_apps_roles.py  seed_phases.py  seed_project.py  seed_sn_audio_refs.py
tests/: baker.py  conftest.py  test_access_request_service.py  test_app_service.py  test_apps_auto_approve.py  test_bcd_api.py  test_bcd_approval.py  test_bcd_approval_workflow.py  test_bcd_crud.py  test_bcd_entry_brief.py  test_bcd_generation_logs.py  test_bcd_generation_pipeline.py  test_bcd_misc_services.py  test_bcd_mm_integration.py  test_bcd_participant_type_enum.py  test_bcd_staleness_api.py  test_bcd_validation.py  test_bhsa_collection.py  test_bhsa_common_nouns.py  test_change_request_service.py  test_console_scoping.py  test_entry_brief.py  test_entry_brief_places_objects.py  test_generator_entry_brief.py  test_jwt_algorithm_allowlist.py  test_language_api.py  test_language_service.py  test_language_stats.py  test_meaning_map_generator.py  test_meaning_map_service.py  test_mm_bcd_integration.py  test_mm_crud.py  test_mm_export.py  test_mm_lists.py  test_mm_workflow.py  test_normalize_bcd_enum_fields_migration.py  test_notification_hooks.py  test_notification_service.py  test_oc_acoustemes_retired.py  test_oc_invite_service.py  (+31 more)
tests/test_annotation_studio/: conftest.py  test_access.py  test_access_http.py  test_members.py  test_readiness.py
tests/test_colar/: conftest.py  test_bootstrap.py
tests/test_platform/: conftest.py  test_cors_exposed_headers.py  test_stt.py  test_stt_endpoint.py  test_translation.py  test_tts_endpoint.py  test_tts_service.py
tests/test_project_health/: conftest.py  test_admin_delete_view.py  test_admin_prompts.py  test_concurrent_complete.py  test_concurrent_posts.py  test_dashboard.py  test_interview_lifecycle.py  test_invite_admin.py  test_malformed_llm.py  test_token_dependency.py
tests/test_sound_necklace/: conftest.py  test_artifacts.py  test_audios.py  test_audit.py  test_bootstrap.py  test_consent.py  test_contract.py  test_lock.py  test_lock_fencing.py  test_project_settings.py  test_resources.py  test_sessions.py  test_transcriptions.py
(+334 files in other folders)
